--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,15 @@
+:root{
+  --header-w-phone: 100%;
+  --header-h-phone: 80px;
+  --header-background: #282c34; 
+  --body-background: #212327; 
+
+}
+
+body{
+background-color: var(--body-background);
+}
+
 .App {
   text-align: center;
 }
@@ -14,15 +26,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: var(--header-background);
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: var(--header-w-phone);
+  height: var(--header-h-phone);
 }
+
 
 .App-link {
   color: #61dafb;
